Show some info on profile page.

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,6 @@
 <h1>Profile</h1>
 
-<%= user.username %>
+<p>Username: <%= user.username %></p>
+<p>Email: <%= user.email %></p>
+<p>User number: <%= user.id %></p>
+<p>Joined: <%= user.createdAt %></p>
