--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -41,7 +41,7 @@
         <label><input type="radio" name="answer-mc-<%= i %>" value="4"> <%= questions[i].choice4 %></label>
       <% } %>
 
-      <button id="submit-<%= i %>">Submit</button>
+      <button class='quiz-submit' id="submit-<%= i %>">Submit</button>
     </div>
   <% } %>
 </div>
