This is too hard button #priorities

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -47,7 +47,7 @@
     <% } %>
 
     <a class='ref-link' href="/ref/<%= type %>" target='_blank'>Reference sheet</a>
-    <a class='ref-link'>This is too hard!</a>
+    <a class='ref-link' href="https://www.youtube.com/watch?v=KxGRhd_iWuE">This is too hard!</a>
   <% } %>
 </div>
 
