--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -53,6 +53,13 @@
 
 <script>
   $(document).ready(function () {
+    // Linebreaks
+    $('#tutorial-material p').each(function () {
+      this.innerHTML = this.innerHTML.replace(/(?:\r\n|\r|\n)/g, '<br>');
+    });
+
+
+    // Scoring
     var difficulty = <%= tutorial.difficulty %>;
     var score = 100 * difficulty;
     var threshold = Math.ceil(score * 0.75);
