--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -46,8 +46,8 @@
       </div>
     <% } %>
 
-    <a class='ref-link' href="/ref/<%= type %>" target='_blank'>Reference sheet</a>
-    <a class='ref-link' href="https://www.youtube.com/watch?v=KxGRhd_iWuE">This is too hard!</a>
+    <a class='ref-link' target='_blank' href="/ref/<%= type %>">Reference sheet</a>
+    <a class='ref-link' target='_blank' href="https://www.youtube.com/watch?v=KxGRhd_iWuE">This is too hard!</a>
   <% } %>
 </div>
 
