--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,3 +4,10 @@
     <div id='footer-logo'>Itty Bitty</div>
   </div>
 </footer>
+
+<script src="/js/cheet.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+  cheet('↑ ↑ ↓ ↓ ← → ← → b a', function () {
+    alert('Voilà!');
+  });
+</script>
