--- a/views/ref_bases.ejs
+++ b/views/ref_bases.ejs
@@ -9,7 +9,7 @@
 
 		ex. 10110010<br><br>
 
-			<div id="digitnumber">
+			<div class="digitnumber">
     			<span>&nbsp;</span>
 			</div>
 
@@ -19,7 +19,7 @@
 
 			<br>
 
-			<div id="digitnumber">
+			<div class="digitnumber">
 			    <span>digit number</span>
 			</div>
 
@@ -94,7 +94,7 @@
 
 		ex.	<br><br>
 
-			<div id="operator">
+			<div class="operator">
     			<span>&nbsp;</span>
 			</div>
 
@@ -104,7 +104,7 @@
 
 			<br>
 
-			<div id="operator">
+			<div class="operator">
     			<span>&times</span>
 			</div>
 
@@ -114,7 +114,7 @@
 
 			<br>
 
-			<div id="operator">
+			<div class="operator">
     			<span>=</span>
 			</div>
 
@@ -214,7 +214,7 @@
 
 		ex.<br>
 
-			<div id="digitnumber">
+			<div class="digitnumber">
     			<span>&nbsp;</span>
 			</div>
 
@@ -224,7 +224,7 @@
 
 			<br>
 
-			<div id="digitnumber">
+			<div class="digitnumber">
     			<span>digit number</span>
 			</div>
 
