Formatting, remove todo from Answer.js

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -405,19 +405,20 @@ footer {
   padding-bottom: 1em;
 }
 
-// Reference Sheets
+
+// Reference sheets
 // ========================================================
 
 .digitnumber {
-  width: 110px;
-  text-align: center;
   display: inline-block;
+  text-align: center;
+  width: 110px;
 }
 
 .operator {
-  width: 20px;
-  text-align: center;
   display: inline-block;
+  text-align: center;
+  width: 20px;
 }
 
 .example {
