--- a/views/ref_bases.ejs
+++ b/views/ref_bases.ejs
@@ -1,255 +1,296 @@
 <h1>Bases reference</h1>
-
 <br>
+
 
 <h3>Binary to Decimal</h3>
 
 <ol>
-	<li>Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1 <br>
+  <li>
+    Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1 <br>
 
-		ex. 10110010<br><br>
+    ex. 10110010<br><br>
 
-			<div class="digitnumber">
-    			<span>&nbsp;</span>
-			</div>
+    <div class="digitnumber">
+      <span>&nbsp;</span>
+    </div>
 
-			<div class="example">
-			    <span>1 0 1 1 0 0 1 0</span>
-			</div>
+    <div class="example">
+      <span>1 0 1 1 0 0 1 0</span>
+    </div>
 
-			<br>
+    <br>
 
-			<div class="digitnumber">
-			    <span>digit number</span>
-			</div>
+    <div class="digitnumber">
+      <span>digit number</span>
+    </div>
 
-			<div class="example">
-			    <span>7 6 5 4 3 2 1 0</span>
-			</div>
+    <div class="example">
+      <span>7 6 5 4 3 2 1 0</span>
+    </div>
+  </li>
+  <br>
 
+  <li>
+    Multiply each bit by 2^(its digit number) <br>
 
-	</li> <br>
+    ex.<br>
 
-	<li>Multiply each bit by 2^(its digit number) <br>
+    (1 x 2^7) = 128<br>
 
-		ex.<br>
+    (0 x 2^6) = 0<br>
 
-		(1 x 2^7) = 128<br>
+    (1 x 2^5) = 32<br>
 
-		(0 x 2^6) = 0<br>
+    (1 x 2^4) = 16<br>
 
-		(1 x 2^5) = 32<br>
+    (0 x 2^3) = 0<br>
 
-		(1 x 2^4) = 16<br>
+    (0 x 2^2) = 0<br>
 
-		(0 x 2^3) = 0<br>
+    (1 x 2^1) = 2<br>
 
-		(0 x 2^2) = 0<br>
+    (0 x 2^0) = 0
 
-		(1 x 2^1) = 2<br>
+  </li>
+  <br>
 
-		(0 x 2^0) = 0
+  <li>
+    Sum the results from the last step. This is the decimal form of the original binary number! <br>
 
-	</li> <br>
+    ex. 128 + 0 + 32 + 16 + 0 + 0 + 2 + 0 = 178
+  </li>
+</ol>
+<br>
 
-	<li>Sum the results from the last step. This is the decimal form of the original binary number! <br>
-
-	ex. 128 + 0 + 32 + 16 + 0 + 0 + 2 + 0 = 178</li>
-</ol><br>
 
 <h3>Decimal to Binary</h3>
 
 <ol>
-	<li>Repeatedly divide the decimal number by 2 until the quotient is 0, keeping track of the remainder each time. <br>
+  <li>
+    Repeatedly divide the decimal number by 2 until the quotient is 0, keeping track of the remainder each time. <br>
 
-		ex. 42<br><br>
+    ex. 42<br><br>
 
-		42 / 2 = 21 R <b>0</b><br>
+    42 / 2 = 21 R <b>0</b><br>
 
-		21 / 2 = 10 R <b>1</b><br>
+    21 / 2 = 10 R <b>1</b><br>
 
-		10 / 2 = 5 R <b>0</b><br>
+    10 / 2 = 5 R <b>0</b><br>
 
-		5 / 2 = 2 R <b>1</b><br>
+    5 / 2 = 2 R <b>1</b><br>
 
-		2 / 2 = 1 R <b>0</b><br>
+    2 / 2 = 1 R <b>0</b><br>
 
-		1 / 2 = 0 R <b>1</b>
+    1 / 2 = 0 R <b>1</b>
 
-	</li> <br>
+  </li>
+  <br>
 
-	<li>Append the remainders, starting with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your binary value.<br>
+  <li>
+    Append the remainders, starting with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your binary value.<br>
 
-		ex. 101010</li>
-</ol><br>
+    ex. 101010
+  </li>
+</ol>
+<br>
+
 
 <h3>Binary to Hexadecimal</h3>
 
 <ol>
-	<li>Split the binary number into groups of 4. If the number does not have a multiple of 4 digits, pad the left with 0’s until it does.<br>
+  <li>
+    Split the binary number into groups of 4. If the number does not have a multiple of 4 digits, pad the left with 0’s until it does.<br>
 
-		ex. 0101011 &#8594; 010 1011 &#8594; 0010 1011</li><br>
+    ex. 0101011 &#8594; 010 1011 &#8594; 0010 1011
+  </li>
+  <br>
 
-	<li>Multiply the leftmost digit in each group by 8, the second digit by 4, the third digit by 2, and the rightmost digit by 1.<br>
+  <li>
+    Multiply the leftmost digit in each group by 8, the second digit by 4, the third digit by 2, and the rightmost digit by 1.<br>
 
-		ex.	<br><br>
+    ex. <br><br>
 
-			<div class="operator">
-    			<span>&nbsp;</span>
-			</div>
+    <div class="operator">
+      <span>&nbsp;</span>
+    </div>
 
-			<div class="example">
-			    <span>0010 1011</span>
-			</div>
+    <div class="example">
+      <span>0010 1011</span>
+    </div>
 
-			<br>
+    <br>
 
-			<div class="operator">
-    			<span>&times</span>
-			</div>
+    <div class="operator">
+      <span>&times;</span>
+    </div>
 
-			<div class="example">
-			    <span>8421 8421</span>
-			</div>
+    <div class="example">
+      <span>8421 8421</span>
+    </div>
+    <br>
 
-			<br>
+    <div class="operator">
+      <span>=</span>
+    </div>
 
-			<div class="operator">
-    			<span>=</span>
-			</div>
+    <div class="example">
+      <span>0020 8421</span>
+    </div>
 
-			<div class="example">
-			    <span>0020 8421</span>
-			</div>
-		
-	</li> <br>
+  </li>
+  <br>
 
-	<li>Sum up the digits in each group. <br>
+  <li>
+    Sum up the digits in each group. <br>
 
-		ex.<br>
-			
-		0020 &#8594; 2<br>
+    ex.<br>
 
-		8021 &#8594; 11
-			
-	</li><br>
+    0020 &#8594; 2<br>
 
-	<li>Append the sums in order. This is your hexadecimal value! Remember that hex number 10-15 are represented by the letters A-F, respectively.<br>
+    8021 &#8594; 11
+  </li>
+  <br>
 
-		ex. 2 11 = 2B</li>
-</ol><br>
+  <li>
+    Append the sums in order. This is your hexadecimal value! Remember that hex number 10-15 are represented by the letters A-F, respectively.<br>
+
+    ex. 2 11 = 2B
+  </li>
+</ol>
+<br>
 
 
 <h3>Hexadecimal to Binary</h3>
 
 <ol>
-	<li>If the hex value has letters, convert the letters into decimal values.<br>
+  <li>
+    If the hex value has letters, convert the letters into decimal values.<br>
 
-		ex. B2 &#8594; 11 2</li><br>
+    ex. B2 &#8594; 11 2
+  </li>
+  <br>
 
-	<li>Convert each decimal number into binary in groups of 4. (Recall earlier lesson)<br>
+  <li>
+    Convert each decimal number into binary in groups of 4. (Recall earlier lesson)<br>
 
-		ex.<br>
+    ex.<br>
 
-		11 &#8594; 1011<br>
-	
-		2 &#8594; 0010
+    11 &#8594; 1011<br>
 
-	</li><br>
+    2 &#8594; 0010
+  </li>
+  <br>
 
-	<li>Append the groups together in order. You're done!<br>
+  <li>
+    Append the groups together in order. You're done!<br>
 
-		ex. 1011 0010 &#8594; 10110010</li>
-</ol><br>
+    ex. 1011 0010 &#8594; 10110010
+  </li>
+</ol>
+<br>
+
 
 <h3>Decimal to Hexadecimal</h3>
 
 <ol>
-	<li>Repeatedly divide the decimal number by 16 until the quotient is 0, keeping track of the remainder each time.<br>
+  <li>
+    Repeatedly divide the decimal number by 16 until the quotient is 0, keeping track of the remainder each time.<br>
 
-		ex.<br>
+    ex.<br>
 
-		2015 / 16 = 125 R <b>15</b><br>
-	
-		125 / 16 = 7 R <b>13</b><br>
-		
-		7 / 16 = 0 R <b>7</b>	
+    2015 / 16 = 125 R <b>15</b><br>
 
-	</li><br>
+    125 / 16 = 7 R <b>13</b><br>
 
-	<li>Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit.
+    7 / 16 = 0 R <b>7</b>
+  </li>
+  <br>
 
-		ex. 7 13 15</li><br>
+  <li>
+    Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit.
 
-	<li>Convert any values between 10-15 to their corresponding letters.
+    ex. 7 13 15
+  </li>
+  <br>
 
-		ex.<br>
-			
-			13 &#8594; D<br>
-			
-			15 &#8594; F
-			
-		</li><br>
+  <li>
+    Convert any values between 10-15 to their corresponding letters.
 
-	<li>Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your hexadecimal value.<br>
+    ex.<br>
 
-		ex. 7DF</li>
+    13 &#8594; D<br>
 
-</ol><br>
+    15 &#8594; F
+
+  </li>
+  <br>
+
+  <li>
+    Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your hexadecimal value.<br>
+
+    ex. 7DF
+  </li>
+</ol>
+<br>
+
 
 <h3>Hexadecimal to Decimal</h3>
 
 <ol>
-	<li>Convert any letters to their corresponding decimal values.<br>
+  <li>
+    Convert any letters to their corresponding decimal values.<br>
 
-		ex. FE22<br>
+    ex. FE22<br>
 
-		F &#8594; 15<br>
+    F &#8594; 15<br>
 
-		E &#8594; 14	
-		
-	</li><br>
+    E &#8594; 14
+  </li>
+  <br>
 
-	<li>Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1<br>
+  <li>
+    Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1<br>
 
-		ex.<br>
+    ex.<br>
 
-			<div class="digitnumber">
-    			<span>&nbsp;</span>
-			</div>
+    <div class="digitnumber">
+      <span>&nbsp;</span>
+    </div>
 
-			<div class="example">
-			    <span>15 14 2 2</span>
-			</div>
+    <div class="example">
+      <span>15 14 2 2</span>
+    </div>
 
-			<br>
+    <br>
 
-			<div class="digitnumber">
-    			<span>digit number</span>
-			</div>
+    <div class="digitnumber">
+      <span>digit number</span>
+    </div>
 
-			<div class="example">
-			    <span>3 &nbsp; 2 &nbsp; 1 0</span>
-			</div>
-		
-	</li> <br>
+    <div class="example">
+      <span>3 &nbsp; 2 &nbsp; 1 0</span>
+    </div>
+  </li>
+  <br>
 
-	<li>Multiply each bit by 16^(its digit number) <br>
+  <li>
+    Multiply each bit by 16^(its digit number) <br>
 
-		ex.<br>
+    ex.<br>
 
-		(15 x 16^3) = 61440<br>
-	
-		(14 x 16^2) = 3584<br>
-	
-		(2 x 16^1) = 32<br>
-	
-		(2 x 16^0) = 2
-			
-	</li> <br>
+    (15 x 16^3) = 61440<br>
 
-	<li>Sum the results from the last step. This is the your decimal number.<br>
+    (14 x 16^2) = 3584<br>
 
-	ex. 61440 + 3584 + 32 + 2 = 65058</li>
+    (2 x 16^1) = 32<br>
 
+    (2 x 16^0) = 2
+  </li>
+  <br>
+
+  <li>
+    Sum the results from the last step. This is the your decimal number.<br>
+
+    ex. 61440 + 3584 + 32 + 2 = 65058
+  </li>
 </ol>
