validation code in controller mostly done, still not working tho

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -51,6 +51,20 @@
   <% } %>
 </div>
 
+
+
+  <!-- temporarily placed here for solution validation check -->
+  <!--
+  <form role='form' action='/tutorials/:type/:level_num' method='post'>
+    <label>Answer:</label>
+    <input type='text' name='user_solution' placeholder='put your solution' required>
+    <input type='text' name='questionID' placeholder='question id'>
+
+    <input type='submit' value='submit'>
+  </form>
+  -->
+
+
 <script>
   $(document).ready(function () {
     // Linebreaks
