--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -43,6 +43,7 @@
         <% } %>
 
         <button class='quiz-submit' id="submit-<%= i %>">Submit</button>
+        <button class='quiz-show-answer' id="show-answer-<%= i %>">Show answer</button>
       </div>
     <% } %>
 
