--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -54,13 +54,41 @@
 
   <!-- temporarily placed here for solution validation check -->
   <!--
-  <form role='form' action='/tutorials/:type/:level_num' method='post'>
+  <form role='form' action='/tutorials/<%= type %>/<%= tutorial.level_num %>' method='post' id="userSol">
     <label>Answer:</label>
     <input type='text' name='user_solution' placeholder='put your solution' required>
     <input type='text' name='questionID' placeholder='question id'>
 
     <input type='submit' value='submit'>
   </form>
+  </div>
+  <div id="result"></div>
+
+  
+  <script>
+
+  // Attach a submit handler to the form
+  $( "#userSol" ).submit(function( event ) {
+   
+    // Stop form from submitting normally
+    event.preventDefault();
+   
+    // Get some values from elements on the page:
+    var $form = $( this ),
+      question_id = "1",
+      solution = $form.find( "input[name='user_solution']" ).val(),
+      url = $form.attr( "action" );
+   
+    // Send the data using post, so far only user_solution
+    var posting = $.post( url, {user_solution: solution, questionID:question_id} );
+   
+    // Put the results in a div
+    posting.done(function( data ) {
+      var content = $( data ).find( "#content" );
+      $( "#resuilt" ).empty().append( content );
+    });
+  });
+  </script>
   -->
 
 <aside id='dialog-toohard'>
