Disable other social network stuff for now, add some achievement names

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -21,10 +21,10 @@
     <div id='login-providers'>
       <h4>You can also use one of these...</h4>
 
-      <a href='/auth/facebook' role='button'>Facebook</a>
       <a href='/auth/twitter' role='button'>Twitter</a>
+      <!--<a href='/auth/facebook' role='button'>Facebook</a>
       <a href='/auth/google' role='button'>Google</a>
-      <a href='/auth/github' role='button'>GitHub</a>
+      <a href='/auth/github' role='button'>GitHub</a>-->
     </div>
   <% } %>
 </div>
