--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -21,8 +21,6 @@
   </form>
 
   <div id='login-providers'>
-    <h4>Or you can login using one of these...</h4>
-
-    <a href='/login'>Facebook, Twitter, Google, GitHub</a>
+    <a href='/login'>Or you can login using Twitter</a>
   </div>
 </div>
