--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -21,6 +21,6 @@
   </form>
 
   <div id='login-providers'>
-    <a href='/login'>Or you can login using Twitter</a>
+    <a href='/auth/twitter'>Or you can login using Twitter</a>
   </div>
 </div>
