--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -45,6 +45,6 @@
 
     <a href='/register' id='register_alt'>Sign up today</a>
 
-    <a href='/login'>Or login with Facebook, Twitter, Google, or GitHub!</a>
+    <a href='/auth/twitter'>Or login with Twitter!</a>
   </div>
 </section>
