--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,12 +2,24 @@
   <div id='footer-gradient'></div>
   <div class='container'>
     <div id='footer-logo'>Itty Bitty</div>
+    <a id='big-fonts' href='#'>Toggle big font mode</a>
   </div>
 </footer>
 
-<script src="/js/cheet.min.js" type="text/javascript"></script>
-<script type="text/javascript">
+<script src='/js/cheet.min.js' type='text/javascript'></script>
+<script type='text/javascript'>
   cheet('↑ ↑ ↓ ↓ ← → ← → b a', function () {
     alert('Voilà!');
   });
+
+  $('#big-fonts').click(function (e) {
+    e.preventDefault();
+
+    $('body').toggleClass('bigfonts');
+    localStorage.setItem('bigfonts', $('body').hasClass('bigfonts'));
+  });
+
+  if (localStorage.getItem('bigfonts') === 'true') {
+    $('body').addClass('bigfonts');
+  }
 </script>
