--- a/views/homelayout.ejs
+++ b/views/homelayout.ejs
@@ -7,6 +7,8 @@
     <title>Itty Bitty</title>
 
     <link rel="stylesheet" href="/styles/importer.css">
+
+    <script src="/js/jquery-2.1.1.min.js"></script>
   </head>
 
   <body id='home'>
