modify call to post score too

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
 <% } %>
 
 <% for (var i = 0; i < scores.length; i++) { %>
-  <h3><%= scores[i].score %> points in level <%= scores[i].level_id %></h3>
+  <h3><%= scores[i].score %> points in level <%= scores[i].level %></h3>
 <% } %>
 
 <br>
