Fix profile link, just use local photo for generic avatar

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <% if (user.photo) {  %>
   <img src="<%= user.photo %>">
 <% } else { %>
-  <img src="http://i.imgur.com/xhuCh4T.jpg">
+  <img src="/images/profile.jpg">
 <% } %>
 
 <p>User #<%= user.id %>: <%= user.username %></p>
